# research-workflow-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements-ui.txt
.github/workflows/: ci.yml
agents/: __init__.py  concepts_agent.py  flashcard_agent.py  mindmap_agent.py  quiz_agent.py  summary_agent.py
api/: __init__.py  routes.py  schemas.py  service.py  storage.py
app/: __init__.py  hf_auth.py  llm.py  main.py
graph/: __init__.py  nodes.py  state.py  workflow.py
notebooks/: 01_test_rag_pipeline.ipynb  02_test_llm.ipynb  03_test_summary_agent.ipynb  04_test_concept_agent.ipynb  05_test_quiz_agent.ipynb  06_test_flashcard_agent.ipynb  07_test_mindmap_agent.ipynb  08_test_workflow.ipynb
rag/: __init__.py  embeddings.py  loaders.py  retriever.py  splitter.py  vectorstore.py
scripts/: test_loader.py
tests/: conftest.py  test_agents.py  test_api.py  test_concepts_agent.py  test_embeddings.py  test_flashcard_agent.py  test_llm.py  test_loaders.py  test_mindmap_agent.py  test_quiz_agent.py  test_retriever.py  test_splitter.py  test_summary_agent.py  test_vectorstore.py  test_workflow.py
ui/: streamlit_app.py
