[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-research-agent"
version = "0.1.0"
description = "AI-powered system that transforms books, articles and PDFs into structured knowledge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Backend API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Agent orchestration & RAG
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    # Vector store
    "chromadb>=0.5.0",
    # Document processing
    "pypdf>=5.0.0",
    # Config & inference (LLM + embeddings via HF API)
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.26.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ui = [
    "streamlit>=1.40.0",
]
notebooks = [
    "ipykernel>=7.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "agents", "api", "graph", "rag"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "agents", "graph", "rag", "api", "ui", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"api/routes.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "agents", "api", "graph", "rag", "ui"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
packages = ["app", "agents", "graph", "rag", "api", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: fast unit tests with mocked dependencies",
]
